post 수정 : 흙길 보수하기

--- a/_posts/2019-01-22-흙길보수하기-1911.md
+++ b/_posts/2019-01-22-흙길보수하기-1911.md
@@ -36,11 +36,9 @@ void solve_1911() {
     for (iter = hole.begin(); iter != hole.end(); iter++) {
         if (newPosition < iter->first) newPosition = iter->first;
 
-        bool isMiddle = iter->first <= newPosition && newPosition < iter->second;
-        while (isMiddle) {
+        while (iter->first <= newPosition && newPosition < iter->second) {
             newPosition += l;
             result++;
-            isMiddle = iter->first <= newPosition && newPosition < iter->second;
         }
 
         if (newPosition >= iter->second) continue;
