--- a/_posts/2018-06-02-집합-11723.md
+++ b/_posts/2018-06-02-집합-11723.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: "11723번) 집합"
-date:   2018-06-02
+date:   2019-01-24
 categories: [Algorithm]
-icon: icon-java
+icon: icon-cplusplus
 ---
 
 # 문제
@@ -21,6 +21,46 @@ icon: icon-java
 <br>
 
 # 코드
+c++
+```c++
+#include "11723.h"
+#include <iostream>
+#include <string.h>
+using namespace std;
+
+void solve_11723() {
+    int m, s;
+    s = 0;
+    scanf("%d", &m);
+
+    for (int i = 0; i < m; i++) {
+        char order[10];
+        scanf("%s", order);
+        int x = 0;
+
+        if (!strcmp(order, "add")) {
+            scanf("%d", &x);
+            s |= (1 << x);
+        } else if (!strcmp(order, "remove")) {
+            scanf("%d", &x);
+            s &= ~(1 << x);
+        } else if (!strcmp(order, "check")) {
+            scanf("%d", &x);
+            printf("%d\n", s & (1 << x) ? 1 : 0);
+        } else if (!strcmp(order, "toggle")) {
+            scanf("%d", &x);
+            if (s & (1 << x)) s &= ~(1 << x);
+            else s |= (1 << x);
+        } else if (!strcmp(order, "all")) {
+            s = (1 << 22) - 1;
+        } else {
+            s = 0;
+        }
+    }
+}
+```
+
+java
 ```java
 import java.util.BitSet;
 import java.util.Scanner;
@@ -64,4 +104,7 @@ public class 집합_11723 {
 <br>
 
 # 풀이
+비트마스크 개념을 연습해보려고 c++로 다시 풀어봤는데, I/O 때문에 짜증났다.. cin, cout에 너무 익숙해지면 안될 거 같다.
+
+(이전 풀이)  
 처음엔 배열로 만들었는데 계속 시간 초과가 떠서 BitSet으로 바꿨는데도 시간 초과가 났다. 출력을 쌓아뒀다가 한번에 하면 된다는 걸보고 StringBuilder를 썼더니 통과했다. 찾아보니 [System.out.println이 느린 이유](http://donggov.tistory.com/53)가 있었다.
