--- a/_posts/2019-02-17-경로찾기-11403.md
+++ b/_posts/2019-02-17-경로찾기-11403.md
@@ -19,17 +19,17 @@ icon: icon-cplusplus
 
 using namespace std;
 
+const int MAX_SIZE = 101;
+vector<int> graph[MAX_SIZE];
 bool isValid;
 
-void dfs(vector<vector<int>> &graph, vector<bool> &isVisited, int i, int j) {
+void dfs(vector<bool> &isVisited, int i, int j) {
     isVisited[i] = true;
 
     vector<int> connected = graph[i];
-    for (int k = 1; k < connected.size(); k++) {
-        if (connected[k] == 1) {
-            if (k == j) isValid = true;
-            else if (!isVisited[k]) dfs(graph, isVisited, k, j);
-        }
+    for (int k : connected) {
+        if (k == j) isValid = true;
+        else if (!isVisited[k]) dfs(isVisited, k, j);
     }
 }
 
@@ -37,17 +37,19 @@ void solve_11403() {
     int n;
     scanf("%d", &n);
 
-    vector<vector<int>> graph(n + 1);
-    for (int i = 1; i <= n; i++) graph[i].resize(n + 1);
     for (int i = 1; i <= n; i++) {
-        for (int j = 1; j <= n; j++) scanf("%d", &graph[i][j]);
+        for (int j = 1; j <= n; j++) {
+            int input;
+            scanf("%d", &input);
+            if (input != 0) graph[i].push_back(j);
+        }
     }
 
     for (int i = 1; i <= n; i++) {
         for (int j = 1; j <= n; j++) {
             vector<bool> isVisited(n + 1);
             isValid = false;
-            dfs(graph, isVisited, i, j);
+            dfs(isVisited, i, j);
             printf("%d ", isValid ? 1 : 0);
         }
         printf("\n");
