--- a/_posts/2019-03-14-다솔이의다이아몬드장식-4751.md
+++ b/_posts/2019-03-14-다솔이의다이아몬드장식-4751.md
@@ -7,19 +7,7 @@ icon: icon-cplusplus
 ---
 
 # 문제
-다솔이는 어떤 문자열을 하나 가지고 있는데, 이 문자열이 별로 아름답지 못하다고 생각하고 있다.
-
-그래서 장식을 해주기로 했다.
-
-예를 들어 문자열이 “D”라면 주위를 ‘#’로 이루어진 다이아몬드로 감싸서 다음과 같이 5x5크기로 장식한다.
-
-빈 곳은 ‘.’로 표시한다.
-
-만약 문자열의 길이가 1보다 더 크면, 인접한 문자는 ‘#’과 ‘.’을 공유하여 장식한다.
-
-예를 들어 문자열이 “APPLE”이면 다음과 같이 장식한다.
-
-주어진 문자열을 장식해주는 프로그램을 작성하라. [SWEA](https://www.swexpertacademy.com/main/code/problem/problemDetail.do?contestProbId=AWSNw5jKzwMDFAUr)
+[SWEA](https://www.swexpertacademy.com/main/code/problem/problemDetail.do?contestProbId=AWSNw5jKzwMDFAUr)
 
 <br>
 
