--- a/_posts/2019-03-16-세가지합구하기-3408.md
+++ b/_posts/2019-03-16-세가지합구하기-3408.md
@@ -7,21 +7,7 @@ icon: icon-cplusplus
 ---
 
 # 문제
-N을 입력 받아 다음의 세 가지 합을 구하는 프로그램을 작성하라.
-
-S1 = 양의 정수 중에서 작은 순서대로 N개의 합.
-
-S2 = 양의 정수 중 홀수인 것들 중에서 작은 순서대로 N개의 합.
-
-S3= 양의 정수 중 짝수인 것들 중에서 작은 순서대로 N개의 합.
-
-예를 들어 N = 5의 입력이 들어왔을 경우,
-
-S1 = 1 + 2 + 3 + 4 + 5,
-
-S2 = 1 + 3 + 5 + 7 + 9,
-
-S3 = 2 + 4 + 6 + 8 + 10 이다. [SWEA](https://www.swexpertacademy.com/main/code/problem/problemDetail.do?contestProbId=AWEbPukqySUDFAWs)
+[SWEA](https://www.swexpertacademy.com/main/code/problem/problemDetail.do?contestProbId=AWEbPukqySUDFAWs)
 
 <br>
 
