--- a/_posts/2019-06-11-JAWSDAY.md
+++ b/_posts/2019-06-11-JAWSDAY.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: "2019 Jawsday 후기"
-date: 2019-06-11
+date:   2019-06-11
 categories: [Etc]
-icon: fa-aws
+icon: icon-aws
 ---
 
 ## 엄청 늦은 2019 JAWSDAY 후기
