--- a/_posts/2019-06-11-JAWSDAY.md
+++ b/_posts/2019-06-11-JAWSDAY.md
@@ -8,11 +8,11 @@ icon: icon-aws
 
 ## 엄청 늦은 2019 JAWSDAY 후기
 
-<img src="{{ site.img_path }}/jawsday_1.jpg" width="50%">
+<img src="{{ site.img_path }}/jawsday_1.jpg">
 
 2019년 2월 23일에 도쿄에서 열린 JAWSDAY에 다녀왔다. 약 4개월이 지난 지금이지만, 지금이라도 죠스데이로 얻은 것에 대해 솔직한 후기를 적으려고 한다. 죠스데이는 일본 AWS 사용자 그룹 행사다. 내가 할 수 있는 일본어는 1~10까지 세는 것과 화장실이 어디냐고 묻는 것 밖에 없지만 당시 다니던 회사 사람들과 갑자기 항공권을 끊었고, 다녀왔다! 
 
-<img src="{{ site.img_path }}/jawsday_2.jpg" width="50%">
+<img src="{{ site.img_path }}/jawsday_2.jpg">
 
 엄청나게 많은 세션들이 열렸지만 모두 일본어로 된 ppt와 발표들이었고 당연히 아무 말도 알아들을 수 없었다 ^-^;; ppt에 일본어 대신 코드가 나올때 뭐라도 배워가려고 엄청나게 집중해서 봤던 기억이 난다. 하지만 지금 떠올렸을 때 내가 죠스데이에서 배운 것은 딱 2가지인 것 같다.
 
