--- a/_posts/2019-06-21-HACKDAY.md
+++ b/_posts/2019-06-21-HACKDAY.md
@@ -10,7 +10,7 @@ icon: icon-javascript
 
 2019년 5월 16일~17일간 네이버 핵데이에 다녀왔다. 재밌어 보이는 주제를 2개를 골라서 1지망, 2지망을 적어 지원했고 코딩테스트를 거쳐 선발이 되었다! 전에는 코테가 없었던 걸로 아는데 이번부터 도입된 것 같았다.
 
-핵데이는 팀별로 다르게 진행된다. 선발된 후 핵데이 당일까지는 약 일주일 정도의 시간이 주어지는데, 멘토님 혹은 팀에 따라 미리 개발을 어느정도 진행할지 혹은 미리 회의를 할지 안 할지까지도 달라진다. 그만큼 자유도를 가지고 다른 것들도 팀에 따라 자율적이다. 우리 팀은 다른 팀들에 비해서 사전에 그렇게 많이 준비해가진 않은 편이다. 오프라인 회의 1번 정도로 기술 스택정도만 확정했다. 메신저로 세부 사항에 대해 어느 정도 이야기만 나누고, 나는 프론트엔드를 담당하게 되어 개인적으로 개발 환경만 bolierplate를 만들어 준비해 갔다. 아무리 사전에 적게 하는 팀이어도 개발 환경정도는 셋팅해가는 게 당일날 삽질할 확률을 조금이라도 낮춰줬던 같아서 좋은 것 같다.
+핵데이는 팀별로 다르게 진행된다. 선발된 후 핵데이 당일까지는 약 일주일 정도의 시간이 주어지는데, 멘토님 혹은 팀에 따라 미리 개발을 어느정도 진행할지 혹은 미리 회의를 할지 안 할지까지도 달라진다. 그만큼 자유도를 가지고 다른 것들도 팀에 따라 자율적이다. 우리 팀은 다른 팀들에 비해서 사전에 그렇게 많이 준비해가진 않은 편이다. 오프라인 회의 1번 정도로 기술 스택정도만 확정했다. 메신저로 세부 사항에 대해 어느 정도 이야기만 나누고, 나는 프론트엔드를 담당하게 되어 개인적으로 개발 환경만 boilerplate를 만들어 준비해 갔다. 아무리 사전에 적게 하는 팀이어도 개발 환경정도는 셋팅해가는 게 당일날 삽질할 확률을 조금이라도 낮춰줬던 같아서 좋은 것 같다.
 
 핵데이 당일이 되어 그린팩토리에 모여 간단한 OT 후, 춘천에 있는 커넥트원으로 이동하여 본격적인 핵데이가 시작됐다. 우리 팀의 주제는 파일 공유 시스템을 만드는 것이었는데 막상 만나서 얘기를 시작해보니 미리 조금 더 구체적으로 프로젝트 구조를 짰어야 했다는 생각이 들었다. 당일날 설계하면서 하루만에 개발하기엔 무리일 것 같다는 생각이 들었는데 역시 무리였다. 프론트엔드 개발은 어느 정도 끝냈지만 백엔드 쪽은 설계된 구조가 아무래도 시간에 비해 너무 컸다보니 잘 진행되지 않았던 것 같다. 근데 핵데이는 마지막에 다른 팀의 결과물을 보는 시간이라던가 수상하는 시간도 없기 때문에 사실 완성 여부가 중요한 행사는 아니다. 과정이 훨씬 중요한 행사라고 생각한다.  
 나 또한 개발하면서 배울 점이나 생각할 점이 많았다. 작성한 코드가 비공개기 때문에 자세히 적을 수는 없지만, 밑단에서 어떻게 돌아가고 있는지 몰랐던 것들을 깨달은 것도 있고, 당연하게 생각했던 것들의 동작 원리를 멘토님이 물어보셔도 뚜렷하게 말할 수 없었던 것들도 깨달았다. 1박2일간의 단기간의 행사기 때문에 기술적으로 성장했다고 말할 수 있다기보단 어떻게 공부하고 개발해야 할지, 그 방향을 잡아준 행사였다.
