--- a/_posts/2019-06-21-HACKDAY.md
+++ b/_posts/2019-06-21-HACKDAY.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2019 NAVER Campus Hackday 2019 후기"
+title: "2019 NAVER Campus Hackday Summer 후기"
 date:   2019-06-21
 categories: [Etc]
 icon: icon-javascript
