post 수정 : 다리 만들기

--- a/_posts/2019-03-29-다리만들기-2146.md
+++ b/_posts/2019-03-29-다리만들기-2146.md
@@ -33,79 +33,79 @@ using namespace std;
 
 int graph[101][101];
 int new_graph[101][101];
-bool is_visited_sea[101][101];
+bool is_visited[101][101];
 int n, bridge = 100 * 100;
 
 struct Node {
     int x; int y;
     int depth;
-    int land; // 해당 노드의 섬 번호
+    int land_num; // 해당 노드의 섬 번호
 };
 
 void dfs(int x, int y, int land_num) {
-    is_visited_sea[x][y] = true;
+    is_visited[x][y] = true;
     new_graph[x][y] = land_num;
 
     // 상
-    if (x - 1 > 0 && graph[x - 1][y] == 1 && !is_visited_sea[x - 1][y]) dfs(x - 1, y, land_num);
+    if (x - 1 > 0 && graph[x - 1][y] == 1 && !is_visited[x - 1][y]) dfs(x - 1, y, land_num);
     // 하
-    if (x + 1 <= n && graph[x + 1][y] == 1 && !is_visited_sea[x + 1][y]) dfs(x + 1, y, land_num);
+    if (x + 1 <= n && graph[x + 1][y] == 1 && !is_visited[x + 1][y]) dfs(x + 1, y, land_num);
     // 좌
-    if (y - 1 > 0 && graph[x][y - 1] == 1 && !is_visited_sea[x][y - 1]) dfs(x, y - 1, land_num);
+    if (y - 1 > 0 && graph[x][y - 1] == 1 && !is_visited[x][y - 1]) dfs(x, y - 1, land_num);
     // 우
-    if (y + 1 <= n && graph[x][y + 1] == 1 && !is_visited_sea[x][y + 1]) dfs(x, y + 1, land_num);
+    if (y + 1 <= n && graph[x][y + 1] == 1 && !is_visited[x][y + 1]) dfs(x, y + 1, land_num);
 }
 
 void bfs(int x, int y) {
     int min_bridge_len_of_start = n * n; // 시작점으로부터의 다리를 짓는 임시적 min값
-    bool is_visited_land[n + 1][n + 1];
-    // 초깃값이 false가 아니어서 처리
     for (int i = 1; i <= n; i++) {
-        for (int j = 1; j <= n; j++) is_visited_land[i][j] = false;
+        for (int j = 1; j <= n; j++) is_visited[i][j] = false;
     }
+
     queue<Node> q;
-    Node node = { x, y, 0, new_graph[x][y] }; // node.land는 시작 노드의 섬 번호
+    Node node = { x, y, 0, new_graph[x][y] }; // node.land_num는 시작 노드의 섬 번호
     q.push(node);
-    is_visited_land[x][y] = true;
+    is_visited[x][y] = true;
 
     while (!q.empty()) {
         Node cur = q.front();
-        if (cur.land != new_graph[x][y]) {
+        if (cur.land_num != new_graph[x][y]) {
             // 새로운 섬을 만남
             if (min_bridge_len_of_start > cur.depth) min_bridge_len_of_start = cur.depth;
         }
         q.pop();
 
-        // 방문 조건 2번째: 방문하려는 노드의 섬 번호가 시작 노드의 섬 번호와 다르거나 바다일 때
+        // 방문 조건: 시작 노드의 섬 번호와 다르거나 바다일 때
+        // 즉, 현재 섬 번호와 같지 않을 때
         // 상
-        if (cur.x - 1 > 0 && new_graph[cur.x - 1][cur.y] != cur.land && !is_visited_land[cur.x - 1][cur.y]) {
+        if (cur.x - 1 > 0 && new_graph[cur.x - 1][cur.y] != cur.land_num && !is_visited[cur.x - 1][cur.y]) {
             bool is_new_land = new_graph[cur.x - 1][cur.y] != 0;
             // depth: 새로운 섬이면 그대로(바다에 다리는 다 지은거니까), 바다면 +1
-            // land: 새로운 섬이면 new_graph에서 새 섬번호 찾기, 바다면 시작 노드의 섬 번호 그대로
-            Node tmp = { cur.x - 1, cur.y, is_new_land ? cur.depth : cur.depth + 1, is_new_land ? new_graph[cur.x - 1][cur.y] : cur.land };
+            // land: 새로운 섬이면 new_graph에서 새 섬번호, 바다면 시작 노드의 섬 번호로 설정
+            Node tmp = { cur.x - 1, cur.y, is_new_land ? cur.depth : cur.depth + 1, is_new_land ? new_graph[cur.x - 1][cur.y] : cur.land_num };
             q.push(tmp);
-            is_visited_land[x - 1][y] = true;
+            is_visited[x - 1][y] = true;
         }
         // 하
-        if (cur.x + 1 <= n && new_graph[cur.x + 1][cur.y] != cur.land && !is_visited_land[cur.x + 1][cur.y]) {
+        if (cur.x + 1 <= n && new_graph[cur.x + 1][cur.y] != cur.land_num && !is_visited[cur.x + 1][cur.y]) {
             bool is_new_land = new_graph[cur.x + 1][cur.y] != 0;
-            Node tmp = { cur.x + 1, cur.y, is_new_land ? cur.depth : cur.depth + 1, is_new_land ? new_graph[cur.x + 1][cur.y] : cur.land };
+            Node tmp = { cur.x + 1, cur.y, is_new_land ? cur.depth : cur.depth + 1, is_new_land ? new_graph[cur.x + 1][cur.y] : cur.land_num };
             q.push(tmp);
-            is_visited_land[cur.x + 1][cur.y] = true;
+            is_visited[cur.x + 1][cur.y] = true;
         }
         // 좌
-        if (cur.y - 1 > 0 && new_graph[cur.x][cur.y - 1] != cur.land && !is_visited_land[cur.x][cur.y - 1]) {
+        if (cur.y - 1 > 0 && new_graph[cur.x][cur.y - 1] != cur.land_num && !is_visited[cur.x][cur.y - 1]) {
             bool is_new_land = new_graph[cur.x][cur.y - 1] != 0;
-            Node tmp = { cur.x, cur.y - 1, is_new_land ? cur.depth : cur.depth + 1, is_new_land ? new_graph[cur.x][cur.y - 1] : cur.land };
+            Node tmp = { cur.x, cur.y - 1, is_new_land ? cur.depth : cur.depth + 1, is_new_land ? new_graph[cur.x][cur.y - 1] : cur.land_num };
             q.push(tmp);
-            is_visited_land[cur.x][cur.y - 1] = true;
+            is_visited[cur.x][cur.y - 1] = true;
         }
         // 우
-        if (cur.y + 1 <= n && new_graph[cur.x][cur.y + 1] != cur.land && !is_visited_land[cur.x][cur.y + 1]) {
+        if (cur.y + 1 <= n && new_graph[cur.x][cur.y + 1] != cur.land_num && !is_visited[cur.x][cur.y + 1]) {
             bool is_new_land = new_graph[cur.x][cur.y + 1] != 0;
-            Node tmp = { cur.x, cur.y + 1, is_new_land ? cur.depth : cur.depth + 1, is_new_land ? new_graph[cur.x][cur.y + 1] : cur.land };
+            Node tmp = { cur.x, cur.y + 1, is_new_land ? cur.depth : cur.depth + 1, is_new_land ? new_graph[cur.x][cur.y + 1] : cur.land_num };
             q.push(tmp);
-            is_visited_land[cur.x][cur.y + 1] = true;
+            is_visited[cur.x][cur.y + 1] = true;
         }
     }
 
@@ -121,7 +121,7 @@ void solve_2146() {
     int land_num = 1;
     for (int i = 1; i <= n; i++) {
         for (int j = 1; j <= n; j++) {
-            if (graph[i][j] == 1 && !is_visited_sea[i][j]) {
+            if (graph[i][j] == 1 && !is_visited[i][j]) {
                 dfs(i, j, land_num);
                 land_num++;
             }
@@ -143,7 +143,8 @@ void solve_2146() {
 <br>
 
 # 풀이
-input으로 받은 지도는 0과 1로만 이루어져 있지만, 같은 육지여도 한 섬끼리만 같은 섬 번호를 갖도록 DFS를 수행해서 육지에 섬 번호를 붙인다.  
-육지의 각 점에서 BFS를 수행하는데, 방문할 수 있는 점은 바다 혹은 시작점과 다른 섬 번호를 가지는 육지로만 한정한다. 바다를 방문하며 depth를 늘려 짓는 다리의 수를 늘리다가 다른 섬을 발견하면 그때까지 지은 다리의 수를 본다. 각각의 BFS 시작점(육지)마다 최소 다리 수가 나올 것이고, 그중에서도 최솟값을 찾아 출력한다.
+
+input으로 받은 지도는 모든 육지가 1로 표기되어 있지만, DFS를 수행해서 하나의 섬끼리만 같은 번호를 갖는 새 지도(new_graph)를 만든다.    
+그 후에 육지의 각 점에서 BFS를 수행하는데, 방문할 수 있는 점은 바다 혹은 시작점과 다른 섬 번호를 가지는 육지로만 한정한다. 바다를 방문하며 depth를 늘려 다리를 짓다가 다른 섬을 발견하면 그때까지 지은 다리의 수를 본다. 각각의 BFS 시작점(육지)마다 최소 다리 수가 나올 것이고, 그중에서도 최솟값을 찾아 출력한다.
 
 2차원 bool 배열이 함수 내에서 선언될 때 당연히 초기값으로 다 false일거라고 생각했는데 아무 값이나 가지더라.. 아직도 그 기준을 잘 모르겠다. 초기화 방식을 알아두던지 언제 초기화가 필요한지를 알아두던지 둘 중 하나는 알아둬야겠다.
