--- a/_posts/2018-03-26-하얀칸-1100.md
+++ b/_posts/2018-03-26-하얀칸-1100.md
@@ -12,6 +12,9 @@ icon: icon-java
 <br>
 
 # 코드
+
+*java*
+
 ```java
 import java.util.BitSet;
 import java.util.Scanner;
@@ -41,7 +44,42 @@ public class 하얀칸_1100 {
 }
 ```
 
+*c++*
+
+```c++
+#include "1100.h"
+#include <iostream>
+
+using namespace std;
+
+void solve_1100() {
+    bool flag = true;
+    int result = 0;
+
+    for (int i = 0; i < 8; i++) {
+        string s;
+        cin >> s;
+
+        for (int j = 0; j < 8; j++) {
+            char c = s[j];
+            if (c == 'F' && flag) result++;
+            flag = !flag;
+        }
+        flag = !flag;
+    }
+
+    cout << result << endl;
+}
+```
+
 <br>
 
 # 풀이
+
+*java*
+
 흰색바탕은 항상 true고, BitSet을 이용해서 한줄마다 flip해서 false로 시작 혹은 true로 시작하는 형태로 바꿔준다. 각 라인 내 char에 인덱스로 접근해서 F(말이 놓여져 있음)임과 동시에 흰색 배경(bitSet.get이 true)이면 결과값에 1을 추가한다.
+
+*c++*
+
+칸의 색깔을 flag로 흰색일 땐 true, 검은색일 땐 false로 관리한다. 첫 칸이 흰색이니 시작을 true로 하고, 각 칸을 지날때마다 flag를 바꾼다. 각 줄의 마지막 색깔과 다음 줄의 첫 색깔이 같으므로 각 줄이 지나도 바꿔준다. 
