--- a/content/posts/2019-08-21--[BOJ]미세먼지안녕-17144.md
+++ b/content/posts/2019-08-21--[BOJ]미세먼지안녕-17144.md
@@ -63,143 +63,141 @@ description: "방의 정보가 주어졌을 때, T초가 지난 후 구사과의
 
 using namespace std;
 
-void solve_17144() {
-    int r, c, t;
-    cin >> r >> c >> t;
+int x[] = {-1, 1, 0, 0};
+int y[] = {0, 0, -1, 1};
 
-    int arr[r][c];
-    vector<pair<int, int>> machine;
+int main() {
+  int r, c, t;
+  cin >> r >> c >> t;
+
+  vector<vector<int>> arr(r, vector<int>(c));
+  vector<pair<int, int>> machine;
+  for (int i = 0; i < r; i++) {
+    for (int j = 0; j < c; j++) {
+      cin >> arr[i][j];
+      if (arr[i][j] == -1) machine.push_back(pair<int, int>(i, j));
+    }
+  }
+
+  while (t--) {
+    vector<vector<int>> new_arr(r, vector<int>(c, 0));
+
+    // 확산
     for (int i = 0; i < r; i++) {
-        for (int j = 0; j < c; j++) {
-            cin >> arr[i][j];
-            if (arr[i][j] == -1) machine.push_back(pair<int, int>(i, j));
+      for (int j = 0; j < c; j++) {
+        if (arr[i][j] > 0) {
+          int num_dust = 0;
+          int dust = arr[i][j] / 5;
+
+          for (int dir = 0; dir < 4; dir++) {
+            bool is_valid;
+            switch (dir) {
+              case 0:
+                is_valid = (i - 1 >= 0);
+                break;
+              case 1:
+                is_valid = (i + 1 < r);
+                break;
+              case 2:
+                is_valid = (j - 1 >= 0);
+                break;
+              case 3:
+                is_valid = (j + 1 < c);
+                break;
+            }
+            if (is_valid && arr[i + x[dir]][j + y[dir]] != -1) {
+              new_arr[i + x[dir]][j + y[dir]] += dust;
+              num_dust++;
+            }
+          }
+          new_arr[i][j] += arr[i][j] - dust * num_dust;
         }
+      }
     }
 
-    while (t--) {
-        int new_arr[r][c];
-        for (int i = 0; i < r; i++) {
-            for (int j = 0; j < c; j++) {
-                new_arr[i][j] = 0;
-            }
-        }
-
-        // 확산
-        for (int i = 0; i < r; i++) {
-            for (int j = 0; j < c; j++) {
-                if (arr[i][j] > 0) {
-                    int cnt_dir = 0;
-                    int tmp = arr[i][j] / 5;
-
-                    // 상
-                    if (i - 1 >= 0 && arr[i - 1][j] != -1) {
-                        new_arr[i - 1][j] += tmp;
-                        cnt_dir++;
-                    }
-                    // 하
-                    if (i + 1 < r && arr[i + 1][j] != -1) {
-                        new_arr[i + 1][j] += tmp;
-                        cnt_dir++;
-                    }
-                    // 좌
-                    if (j - 1 >= 0 && arr[i][j - 1] != -1) {
-                        new_arr[i][j - 1] += tmp;
-                        cnt_dir++;
-                    }
-                    // 우
-                    if (j + 1 < c && arr[i][j + 1] != -1) {
-                        new_arr[i][j + 1] += tmp;
-                        cnt_dir++;
-                    }
-
-                    new_arr[i][j] += arr[i][j] - (arr[i][j] / 5) * cnt_dir;
-                }
-            }
-        }
-
-        // 공기청정기 붙이는 작업
-        for (int i = 0; i < 2; i++) {
-            pair<int, int> p = machine[i];
-            new_arr[p.first][p.second] = -1;
-        }
-
-        // 순환
-        // 윗부분
-        pair<int, int> p = machine[0];
-        // 우
-        int next = 0;
-        for (int i = 1; i < c; i++) {
-            int cur = new_arr[p.first][p.second + i];
-            new_arr[p.first][p.second + i] = next;
-            next = cur;
-        }
-
-        // 상
-        for (int i = 1; p.first - i >= 0; i++) {
-            int cur = new_arr[p.first - i][c - 1];
-            new_arr[p.first - i][c - 1] = next;
-            next = cur;
-        }
-
-        // 좌
-        for (int i = c - 2; i >= 0; i--) {
-            int cur = new_arr[0][i];
-            new_arr[0][i] = next;
-            next = cur;
-        }
-
-        // 하
-        for (int i = 1; i < p.first; i++) {
-            int cur = new_arr[i][0];
-            new_arr[i][0] = next;
-            next = cur;
-        }
-
-        // 아래부분
-        p = machine[1];
-        // 우
-        next = 0;
-        for (int i = 1; i < c; i++) {
-            int cur = new_arr[p.first][p.second + i];
-            new_arr[p.first][p.second + i] = next;
-            next = cur;
-        }
-
-        // 하
-        for (int i = 1; p.first + i < r; i++) {
-            int cur = new_arr[p.first + i][c - 1];
-            new_arr[p.first + i][c - 1] = next;
-            next = cur;
-        }
-
-        // 좌
-        for (int i = c - 2; i >= 0; i--) {
-            int cur = new_arr[r - 1][i];
-            new_arr[r - 1][i] = next;
-            next = cur;
-        }
-
-        // 상
-        for (int i = r - 2; i > p.first; i--) {
-            int cur = new_arr[i][0];
-            new_arr[i][0] = next;
-            next = cur;
-        }
-
-        for (int i = 0; i < r; i++) {
-            for (int j = 0; j < c; j++) {
-                arr[i][j] = new_arr[i][j];
-            }
-        }
+    // 공기청정기 붙이기
+    for (int i = 0; i < 2; i++) {
+      pair<int, int> p = machine[i];
+      new_arr[p.first][p.second] = -1;
     }
 
-    int result = 0;
+    // 순환
+    // 윗부분
+    pair<int, int> p = machine[0];
+    // 우
+    int next = 0;
+    for (int i = 1; i < c; i++) {
+      int cur = new_arr[p.first][p.second + i];
+      new_arr[p.first][p.second + i] = next;
+      next = cur;
+    }
+
+    // 상
+    for (int i = 1; p.first - i >= 0; i++) {
+      int cur = new_arr[p.first - i][c - 1];
+      new_arr[p.first - i][c - 1] = next;
+      next = cur;
+    }
+
+    // 좌
+    for (int i = c - 2; i >= 0; i--) {
+      int cur = new_arr[0][i];
+      new_arr[0][i] = next;
+      next = cur;
+    }
+
+    // 하
+    for (int i = 1; i < p.first; i++) {
+      int cur = new_arr[i][0];
+      new_arr[i][0] = next;
+      next = cur;
+    }
+
+    // 아래부분
+    p = machine[1];
+    // 우
+    next = 0;
+    for (int i = 1; i < c; i++) {
+      int cur = new_arr[p.first][p.second + i];
+      new_arr[p.first][p.second + i] = next;
+      next = cur;
+    }
+
+    // 하
+    for (int i = 1; p.first + i < r; i++) {
+        int cur = new_arr[p.first + i][c - 1];
+        new_arr[p.first + i][c - 1] = next;
+        next = cur;
+    }
+
+    // 좌
+    for (int i = c - 2; i >= 0; i--) {
+      int cur = new_arr[r - 1][i];
+      new_arr[r - 1][i] = next;
+      next = cur;
+    }
+
+    // 상
+    for (int i = r - 2; i > p.first; i--) {
+      int cur = new_arr[i][0];
+      new_arr[i][0] = next;
+      next = cur;
+    }
+
     for (int i = 0; i < r; i++) {
-        for (int j = 0; j < c; j++) {
-            if (arr[i][j] != -1) result += arr[i][j];
-        }
+      for (int j = 0; j < c; j++) {
+        arr[i][j] = new_arr[i][j];
+      }
     }
-    cout << result << endl;
+  }
+
+  int result = 0;
+  for (int i = 0; i < r; i++) { 
+    for (int j = 0; j < c; j++) {
+      if (arr[i][j] != -1) result += arr[i][j];
+    }
+  }
+  cout << result << endl;
 }
 ```
 
