--- a/content/posts/2019-08-21--[BOJ]미세먼지안녕-17144.md
+++ b/content/posts/2019-08-21--[BOJ]미세먼지안녕-17144.md
@@ -6,6 +6,7 @@ draft: false
 slug: "/posts/boj-17144/"
 category: "Algorithm"
 tags:
+  - "Baekjoon"
   - "Samsung"
 description: "방의 정보가 주어졌을 때, T초가 지난 후 구사과의 방에 남아있는 미세먼지의 양을 구해보자."
 ---
