--- a/content/posts/2019-09-02--[프로그래머스]후보키.md
+++ b/content/posts/2019-09-02--[프로그래머스]후보키.md
@@ -6,6 +6,7 @@ draft: false
 slug: "/posts/programmers-후보키/"
 category: "Algorithm"
 tags:
+  - "Programmers"
   - "Kakao"
 description: "릴레이션을 나타내는 문자열 배열 relation이 매개변수로 주어질 때, 이 릴레이션에서 후보 키의 개수를 return 하도록 solution 함수를 완성하라."
 ---
