--- a/content/posts/2019-09-19--[BOJ]캐슬디펜스-17135.md
+++ b/content/posts/2019-09-19--[BOJ]캐슬디펜스-17135.md
@@ -6,6 +6,7 @@ draft: false
 slug: "/posts/boj-17135/"
 category: "Algorithm"
 tags:
+  - "Baekjoon"
   - "Samsung"
 description: "격자판의 상태가 주어졌을 때, 궁수의 공격으로 제거할 수 있는 적의 최대 수를 계산해보자."
 ---
