--- a/content/posts/2019-09-02--[Leetcode]3Sum-15.md
+++ b/content/posts/2019-09-02--[Leetcode]3Sum-15.md
@@ -5,6 +5,8 @@ template: "post"
 draft: false
 slug: "/posts/leetcode-15/"
 category: "Algorithm"
+tags:
+  - "Leetcode"
 description: "Find all unique triplets in the array which gives the sum of zero."
 ---
 
