--- a/content/posts/2019-09-06--[프로그래머스]무지의먹방라이브.md
+++ b/content/posts/2019-09-06--[프로그래머스]무지의먹방라이브.md
@@ -6,6 +6,7 @@ draft: false
 slug: "/posts/programmers-무지의먹방라이브/"
 category: "Algorithm"
 tags:
+  - "Programmers"
   - "Kakao"
 description: "각 음식을 모두 먹는데 필요한 시간이 담겨있는 배열 food_times, 네트워크 장애가 발생한 시간 K 초가 매개변수로 주어질 때 몇 번 음식부터 다시 섭취하면 되는지 return 하도록 solution 함수를 완성하라."
 ---
