--- a/content/posts/2019-10-13--[BOJ]벽부수고이동하기2-14442.md
+++ b/content/posts/2019-10-13--[BOJ]벽부수고이동하기2-14442.md
@@ -99,8 +99,7 @@ int main() {
 *시행착오*
 1. 벽 k개 부숴서 새로 만든 맵으로 BFS 돌기  
   지도 안 최대 벽 수는 n * m개, 이 n * m개의 벽에 대해서 하나씩 부수고 n * m 탐색하면? O((n * m)^2)이다.
-2. 가면서 부수자!
-  2-1. 각 path마다 방문 체크여부를 가져야 함
-    큐에 `is_visited[1000][1000]`를 담으려니 노드가 1000개만 되어도 메모리 초과가 되었다.
-3. 방문 여부를 외부에서 관리해야 한다.
+2. 가면서 부수자!  
+  각 path마다 방문 체크여부를 가지려 했지만, 큐에 `is_visited[1000][1000]`를 담으려니 노드가 1000개만 되어도 메모리 초과가 되었다.
+3. 방문 여부를 외부에서 관리해야 한다.  
   치킨 배달이나 [01 Matrix](https://ravieeeee.github.io/posts/leetcode-542/)에서 했던 방식처럼 외부에서 depth를 관리한다. depth가 0이 아니라면 이미 방문했다는 것이고, BFS는 일찍 방문할수록 최단 거리기 때문에 다시 방문할 필요가 없다.
